objects/VisualAntidote__Form_Submission__c.object
<CustomObject>
    <fields>
        <fullName>VisualAntidote__Child_Object_Letter__c</fullName>
        <label>Child Object Letter</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Context_Id__c</fullName>
        <description>User Id of User who submitted the record</description>
        <label>Context Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Context_Type__c</fullName>
        <label>Context Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Admin</fullName>
                    <default>true</default>
                    <label>Admin</label>
                </value>
                <value>
                    <fullName>User</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisualAntidote__Details__c</fullName>
        <label>Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Execution_Order__c</fullName>
        <label>Execution Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Form_Type__c</fullName>
        <label>Form Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ClassicRegular</fullName>
                    <default>true</default>
                    <label>ClassicRegular</label>
                </value>
                <value>
                    <fullName>ClassicLightning</fullName>
                </value>
                <value>
                    <fullName>NativeRegular</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisualAntidote__Form_Used__c</fullName>
        <formula>HYPERLINK(&apos;/apex/FormEditor?id=&apos; + VisualAntidote__Form__r.Id,  VisualAntidote__Form__r.Name , &apos;_blank&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Form Used</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Form</label>
        <referenceTo>VisualAntidote__Previous_Form__c</referenceTo>
        <relationshipLabel>Form Submissions</relationshipLabel>
        <relationshipName>Form_Submissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__IP_Address__c</fullName>
        <label>IP Address</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Is_Native__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Native</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Object_Order__c</fullName>
        <label>Object Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Object__c</fullName>
        <label>Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Record_Created_Updated__c</fullName>
        <label>Record Created/Updated</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Record_Root_Identifier__c</fullName>
        <label>Record Root Identifier</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Reference_Record_Id__c</fullName>
        <label>Reference Record Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Related_Field_Name__c</fullName>
        <label>Related Field Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Repeat_Index__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Repeat Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Staging_Submission__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Staging Submission</label>
        <referenceTo>VisualAntidote__Staging_Submission__c</referenceTo>
        <relationshipLabel>Form Submissions</relationshipLabel>
        <relationshipName>Form_Submissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Status__c</fullName>
        <defaultValue>&quot;Submitted&quot;</defaultValue>
        <label>Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Submission_Date__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Submission Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Submission__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submission</label>
        <referenceTo>VisualAntidote__Submission__c</referenceTo>
        <relationshipLabel>Form Submissions</relationshipLabel>
        <relationshipName>Form_Submissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Submitted_Data_XML__c</fullName>
        <label>Submitted Data XML</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__UpdateParentFieldsByRESTAPI__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Update Submission fields by using API</description>
        <label>Update Parent Fields By REST API</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__User_Content_ID__c</fullName>
        <label>User Content ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Verification_Emails__c</fullName>
        <label>Verification_Emails</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Form Submission</label>
    <listViews>
        <fullName>VisualAntidote__All</fullName>
        <columns>NAME</columns>
        <columns>VisualAntidote__Form__c</columns>
        <columns>VisualAntidote__Object__c</columns>
        <columns>VisualAntidote__Record_Created_Updated__c</columns>
        <columns>VisualAntidote__Submission_Date__c</columns>
        <columns>VisualAntidote__IP_Address__c</columns>
        <columns>VisualAntidote__Status__c</columns>
        <columns>VisualAntidote__Details__c</columns>
        <columns>VisualAntidote__User_Content_ID__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FFS-{000000}</displayFormat>
        <label>Form Submission ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Form Submissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>